--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "^19.0.0-beta-3229e95-20250315",
     "framer-motion": "^12.5.0",
     "next": "15.2.3",
