--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/postcss": "^4.0.14",
+    "autoprefixer": "^10.4.21",
     "babel-plugin-react-compiler": "^19.0.0-beta-3229e95-20250315",
     "framer-motion": "^12.5.0",
     "next": "15.2.3",
@@ -22,13 +24,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.0.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
-    "tailwindcss": "^4.0.14",
+    "tailwindcss": "3.3.2",
     "typescript": "^5"
   }
 }
